--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,19 @@ nav {
     align-items: center;
     height: 100px;
    
+    
+   
 }
 
 .gauche {
     display: flex;
-    height: 19px;
+    
+    height: 49px;
     width: 61px;
-    left: 30px;
+    left: 300px;
     top: 30px;
+  
+    
   
  
 }
@@ -64,6 +69,165 @@ nav {
     text-decoration: none;
     color: #0065FC;
 }
+
+/* titre */
+
+.titre h1{
+    margin: 0;
+    padding: 0;
+}
+
+.titre p {
+    margin: 0;
+    padding-top: 5px;
+
+}
+
+/* barre de recherche */
+
+.container {
+    display: flex;
+    flex-direction: row;
+    height: 50px;
+    width: 337px;
+    border-radius: 15px; 
+    border: 1px solid #F2F2F2;
+}
+
+
+
+.fa-sharp {
+    width: 50px;
+    height: 50px;
+    background-color: #F2F2F2;
+    border-radius: 15px 0px 0px 15px;
+    color: #000000;
+    display: flex;
+   padding-left: 20px;
+   padding-right: 20px;
+   align-items: center;
+   font-size: 20px;
+    
+
+}
+
+.container input {
+    flex: none;
+    order: 0;
+    padding: 0;
+    margin: 0;
+    width: 205px;
+    height: 50px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    color: #000000;
+    border: none;
+}
+
+.container button {
+
+    height: 50px;
+    width: 172px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 15px 16px;
+    gap: 10px;
+    font-size: 1.2em;
+    font-family: 'Raleway', sans-serif;
+    font-style: bold;
+    /* Blue */
+    font-weight: bold;
+    background: #0065FC;
+    color: #DEEBFF;
+    border: 1px solid #0065FC;
+    border-radius: 0px 15px 15px 0px;
+
+}
+
+
+/* partie filtre */
+
+.barfilter  {
+display: inline-block;
+  flex-direction: row;
+  justify-content: space-between;
+    
+}
+
+.icones * {
+display: flex;
+flex-direction: row;
+margin-right: 15px;
+margin-left: 15px;
+text-decoration: none;
+align-items: center;
+
+}
+
+li i {
+    font-size: 20px;
+}
+
+.icones li{
+
+    border: #F2F2F2 2px solid ;
+    border-radius: 50px;
+    align-items: center;
+    padding: 17px; 
+   
+    
+}
+
+.icones h3 {
+    font-size: 1.2em;
+    font-family: 'Raleway', sans-serif;
+    font-style: bold;
+    margin-left: -5px;
+
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+li.filtres {
+border: none;
+margin-left: 1px;
+padding: 0;
+
+}
+
+
+/* partie information */
+
+.info {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    
+}
+
+.info i {
+font-size: 15px;
+border: #F2F2F2 2px solid;
+padding: 10px 15px 10px 15px;
+border-radius: 50%;
+
+
+}
+
+.info p {
+margin-left: 15px;
+padding-top: 10px;
+}
+
+
 
 body {
     display: flex;
