--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,19 @@ nav {
     align-items: center;
     height: 100px;
    
+    
+   
 }
 
 .gauche {
     display: flex;
-    height: 19px;
+    
+    height: 49px;
     width: 61px;
-    left: 30px;
+    left: 300px;
     top: 30px;
+  
+    
   
  
 }
@@ -74,7 +79,7 @@ nav {
 
 .titre p {
     margin: 0;
-    padding: 0;
+    padding-top: 5px;
 
 }
 
@@ -84,7 +89,7 @@ nav {
     display: flex;
     flex-direction: row;
     height: 50px;
-    width: 307px;
+    width: 337px;
     border-radius: 15px; 
     border: 1px solid #F2F2F2;
 }
@@ -151,13 +156,14 @@ nav {
 display: inline-block;
   flex-direction: row;
   justify-content: space-between;
-
+    
 }
 
 .icones * {
 display: flex;
 flex-direction: row;
 margin-right: 15px;
+margin-left: 15px;
 text-decoration: none;
 align-items: center;
 
@@ -168,11 +174,12 @@ li i {
 }
 
 .icones li{
-padding-left: 20px;
+
     border: #F2F2F2 2px solid ;
     border-radius: 50px;
     align-items: center;
-
+    padding: 17px; 
+   
     
 }
 
@@ -191,10 +198,35 @@ ul {
 
 li.filtres {
 border: none;
-margin: 0;
+margin-left: 1px;
 padding: 0;
 
 }
+
+
+/* partie information */
+
+.info {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    
+}
+
+.info i {
+font-size: 15px;
+border: #F2F2F2 2px solid;
+padding: 10px 15px 10px 15px;
+border-radius: 50%;
+
+
+}
+
+.info p {
+margin-left: 15px;
+padding-top: 10px;
+}
+
 
 
 body {
