--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,7 @@ nav {
     align-items: center;
     margin-right: 20px;
     margin-left: 20px;
-    font-style: normal;
-    Font-size: 16px;
+    font-size: 16px;
     text-decoration: none;
     color: black;
 }
@@ -132,7 +131,7 @@ nav {
 
 /* barfilter */
 .barfilter  {
-   height: auto;
+    height: auto;
     width: 100%;
     padding: auto;
     margin: auto;
@@ -178,7 +177,6 @@ li i {
 
 .icones h3 {
     font-size: 1.2em;
-    font-style: bold;
     margin-left: -5px;
 }
 
@@ -318,272 +316,279 @@ body {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
+   /* nav */
+    .gauche img {
+         width: auto;
+         height: 50%;
+    }
 
-    .barfilter  {
-        height: auto;
-         width: 100%;
-         padding: auto;
-         margin: auto;
-     }
-     
-     .icones ul {
+    /* filter */
+    .filtres {
          display: flex;
          flex-direction: row;
-         justify-content: space-between;
-         width: 85%;
-         margin-top: 15px;
+         justify-content: center;
+         position: absolute;
+         margin-bottom: 70px;
+     }
+
+     .filtres h3{
+         font-size: 20px;
+     }
+
+     .icones {
+         width: 100%;
+         height: auto;
+         flex-direction: row;
+     }
+
+     .icones ul {
+         width: 100%;
+         margin-top: 25px;
      }
      
-     .icones li {
-        display: flex;
-        width: 150px;
-        justify-content: center;
-        align-items: center;
-     }
-     
-     .icones ul :hover{
+     .icones ul :hover {
          cursor: pointer;
          text-decoration: none;
          background: var(--blue-light, #DEEBFF);
      }
       
      li i {
-         font-size: 20px;
-         padding-right: 15px;
+         display: flex;
+         font-size: 18px;
+         justify-content: center;
+         align-items: center;
      }
      
-     .icones li{
-        width: 70%;
-         border: #F2F2F2 2px solid ;
+     .icones li {
+        display: flex;
+         border: var(--grey-tint-2, #D9D9D9) 2px solid ;
          border-radius: 50px;
          align-items: center;
-         padding: 15px 10px 15px 10px;
+         padding: 15px 0px 15px 15px;
+         margin-top: 15px;
      }
      
      .icones h3 {
-        width: 100%;
-         font-size: 1.2em;
-         margin-left: -5px;
+         width: 90%;
+         font-size: 16px;
      }
-     
-     ul {
-         margin: 0;
-         padding: 0;
-     }
-     
-     .filtres {
-         border: none;
-         margin-left: 1px;
-         padding: 0;
-     }
+    
+     /* main */
      
     .hebergements-and-populaires {
-        flex-direction: column;
+         flex-direction: column;
     }
 
     .hebergements {
-        width: 100%;
+         width: 100%;
     }
 
     .populaires {
-        width: 100%;
-        margin-top: 50px;
+         width: 100%;
+         margin-top: 50px;
     }
 
     .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
     }
 
     .populaires-cards .card {
-        width: 30%;
+         width: 30%;
     }
 
     .populaires-cards .card-title {
-        font-size: 14px;
+         font-size: 14px;
     }
 
     .populaires-cards .card-subtitle {
-        font-size: 13px;
+         font-size: 13px;
     }
 }
 
 /* Small devices (phones, less than 768px) */
-@media only screen and (max-width: 768px)  {
+@media screen and (max-width: 768px)  {
     
     .main-container {
-        margin: 0px;
-        padding: 0;
+         margin: 0px;
+         padding: 0;
     }
 
     header {
-        margin: 0 35px 0 35px;
+         margin: 0 35px 0 35px;
     }
 
     nav {
-        display: flex;
-        flex-direction: column;
-        height: auto;
-        margin: auto;
+         display: flex;
+         flex-direction: column;
+         height: auto;
+         margin: auto;
       }
     
       .gauche {
-        width: 100%;
-        justify-content: center;
-        margin: 15px;
+         width: 100%;
+         justify-content: center;
+         margin: 15px;
       }
 
       .gauche img {
-        width: 20%;
-        height: 50%;
-        padding: 15px;
+         width: 20%;
+         height: 50%;
+         padding: 15px;
       }
     
       .droite {
-        display: flex;
-        width: 100%;
-        flex-direction: row;
-        align-items: center;
-        margin: 10px 35px 30px 35px; 
+         display: flex;
+         width: 100%;
+         flex-direction: row;
+         align-items: center;
+         margin: 10px 35px 30px 35px; 
       }
     
       .droite a {
-        display: flex;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        padding: 10px 0px 15px 0px;
-        margin: 0;
-        border-bottom: #F2F2F2 2.7px solid; 
+         display: flex;
+         width: 100%;
+         justify-content: center;
+         align-items: center;
+         padding: 10px 0px 15px 0px;
+         margin: 0;
+         border-bottom: #F2F2F2 2.7px solid; 
       }
 
-      /* barre de survol */
+      /* right hover */
       .droite :hover {
-        width: 100%;
-        border: none;
-        border-bottom: #0065FC 2px solid;
-        padding-bottom: 15px;
+         width: 100%;
+         border: none;
+         border-bottom: #0065FC 2px solid;
+         padding-bottom: 15px;
       }
 
-      /* partie titre */
+      /* title */
       .titre h1 {
-        width: 90%;
-        font-size: 25px;
-        font-weight: bolder; 
+         width: 90%;
+         font-size: 25px;
+         font-weight: bolder; 
       }
 
       .titre p {
-        width: 100%;
-        margin-top: 3px;
-        font-size: 16px;
+         width: 100%;
+         margin-top: 3px;
+         font-size: 16px;
       }
 
       /*search bar*/
       .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: auto;
-        margin: 0;
-        border: #F2F2F2 2px solid;
-        border: none;
-        padding: 0;
+         display: flex;
+         flex-direction: row;
+         justify-content: center;
+         align-items: center;
+         width: 100%;
+         height: auto;
+         margin: 0;
+         border: #F2F2F2 2px solid;
+         border: none;
+         padding: 0;
       }
 
       .container i {
-        width: auto;
+         width: auto;
       }
 
       .container input {
-        width: 70%;
-        border: #F2F2F2 2px solid;
+         width: 70%;
+         border: #F2F2F2 2px solid;
       }
     
       .container button {
-        display: none;
-        padding: 0;
+         display: none;
+         padding: 0;
       }
 
-      .fa-magnifying-glass{
-       display: block;
-       margin-left: -10px;
-       padding: 18px;
-       background-color: #0065FC;
-       color: #F2F2F2;
-       border-radius: 15px 15px 15px 15px;
+      .fa-magnifying-glass {
+         display: block;
+         margin-left: -10px;
+         padding: 18px;
+         background-color: #0065FC;
+         color: #F2F2F2;
+         border-radius: 15px 15px 15px 15px;
       }
        
       /* filter */
-       .icones ul{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        height: auto;
-        gap: 14px;
-        padding: auto;
-        justify-content: center;
-        align-items: center;
+       .icones ul {
+         display: flex;
+         flex-direction: row;
+         flex-wrap: wrap;
+         width: 100%;
+         height: auto;
+         gap: 10px;
+         padding: auto;
+         justify-content: center;
+         align-items: center;
       }
 
       .icones {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        width: 100%;
-        height: auto;
-        align-items: center;
+         display: flex;
+         flex-direction: row;
+         flex-wrap: wrap;
+         width: 100%;
+         height: auto;
+         align-items: center;
       }
 
       .icones li {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 40%;
-        height: auto;
-        padding: 16px 13px 16px 13px; 
-        font-size: 13px; 
-        border-radius: 35px;
-        border: 2px solid var(--grey-tint-2, #D9D9D9);
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         width: 40%;
+         height: auto;
+         padding: 15px 11px 15px 11px; 
+         font-size: 10px; 
+         border-radius: 35px;
+         border: 2px solid var(--grey-tint-2, #D9D9D9);
       }
 
+      .filtres {
+         display: flex;
+         justify-content: center;
+         margin-bottom: 170px;
+    }
+
       .filtres h3 {
-        margin-top: 10px;
-        margin-left: 5px;
+         width: 100%;
+         margin-top: 10px;
+         font-size: 18px;
       }
 
       li i {
-        justify-content: center;
-        padding-left: 20px;
+         justify-content: center;
+         padding-left: 8px;
       }
         
       /*info */
       .info {
-        width: 100%;
-        padding: 0;
-        margin: 0;
+         width: 100%;
+         padding: 0;
+         margin: 0;
       }
 
-      .info .fa-info{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 25px;
-        height: 25px;
-        font-size: 12px;
-        border: #F2F2F2 2px solid;
-        padding: 1px;
-        margin-top: 16px;
+      .info .fa-info {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         width: 25px;
+         height: 25px;
+         font-size: 12px;
+         border: #F2F2F2 2px solid;
+         padding: 1px;
+         margin-top: 16px;
       }
       
       .info p {
-        width: 100%;
-        padding-bottom: 6px;
-        font-size: 18px;
+         width: 100%;
+         padding-bottom: 6px;
+         font-size: 18px;
       }
      
 
