--- a/css/style.css
+++ b/css/style.css
@@ -16,32 +16,52 @@
 }
 
 /* nav bar */
+.main-container-nav {
+    width: 100%;
+    max-width: 1440px;
+    box-sizing: border-box;
+    position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+    overflow: hidden;
+    background-color: white;
+}
+
 nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: 79px;  
+    width: 100%;
 }
 
 .left {
     display: flex;
-    height: 49px;
+    height: auto;
+    width: 121px;
+}
+
+.left img {
     width: 61px;
-    left: 300px;
-    top: 30px;
+    height: 19px;
+    padding: 30px;
+}
+
+.right {
+    display: flex;
+    flex-direction: row;
+    width: 328px;
+    height: 35px;
+    padding: 0 25px;
+    justify-content: space-around;
 }
 
 .right a {
-    display: inline-block;
-    margin-bottom: 70px;
-    padding-top: 10px;
-    align-items: center;
-    margin-right: 20px;
-    margin-left: 20px;
     font-size: 16px;
     text-decoration: none;
     color: black;
+    height: auto;
 }
 
 .right :hover {
