--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ nav {
 .left img {
     width: 61px;
     height: 19px;
-    padding: 30px;
+    margin: 30px;
 }
 
 .right {
@@ -84,7 +84,7 @@ nav {
 .container {
     display: flex;
     flex-direction: row;
-    height: 50px;
+    height: 49px;
     width: 377px;
     border-radius: 15px; 
     border: 1px solid #F2F2F2;
@@ -93,7 +93,7 @@ nav {
 
 .fa-sharp {
     width: 50px;
-    height: 50px;
+    height: 49px;
     background-color: #F2F2F2;
     border-radius: 15px 0px 0px 15px;
     color: #000000;
@@ -101,7 +101,7 @@ nav {
     padding-left: 20px;
     padding-right: 20px;
     align-items: center;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .fa-magnifying-glass {
@@ -110,7 +110,7 @@ nav {
 
 .container input {
     width: 205px;
-    height: 50px;
+    height: 49px;
     font-size: 18px;
     line-height: 21px;
     text-align: center;
@@ -119,14 +119,13 @@ nav {
 }
 
 .container button {
-    height: 50px;
-    width: 172px;
+    height: 49px;
+    width: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
     padding: 15px 16px;
-    gap: 10px;
-    font-size: 1.2em;
+    font-size: 18px;
     font-weight: bold;
     background: #0065FC;
     color: #DEEBFF;
@@ -196,15 +195,23 @@ li i {
 }
 
 .info i {
-    font-size: 15px;
+    display: flex;
+    width: 24px;
+    height: 24px;
     border: #F2F2F2 2px solid;
-    padding: 10px 15px 10px 15px;
     border-radius: 50%;
 }
 
+.fa-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+}
+
 .info p {
-    margin-left: 15px;
-    padding-top: 10px;
+    margin-left: 10px; 
+    padding-top: 5px;
 }
 
 /* main */
