--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,6 @@
     width: 100%;
     max-width: 1440px;
     box-sizing: border-box;
-    position: -webkit-sticky;
-	position: sticky;
-	top: 0;
-    overflow: hidden;
-    background-color: white;
 }
 
 nav {
@@ -35,6 +30,11 @@ nav {
     height: 79px;  
     width: 100%;
     margin-bottom: 30px;
+    position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+    overflow: hidden;
+    background-color: white;
 }
 
 .left {
@@ -55,8 +55,8 @@ nav {
     padding-left: 25px; 
     padding-right: 25px; 
     flex-direction: row; 
-    justify-content: flex-end; 
-    margin-bottom: 30px;
+    justify-content: center; 
+    margin-bottom: 40px;
     gap: 68px;
 }
 
@@ -65,12 +65,17 @@ nav {
     text-decoration: none;
     color: black;
     height: auto;
+    padding-top: 19px;
 }
 
 .right :hover {
     border-top: solid 3px #0065FC;
     cursor: pointer;
     text-decoration: none;
+    color: #0065FC;
+}
+
+.right a:focus {
     color: #0065FC;
 }
 
@@ -150,7 +155,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 55%;
+    width: 758px;
 }
 
 .icones li {
@@ -178,13 +183,10 @@ li i {
 
 .icones h3 {
     font-size: 1.2em;
-    margin-left: -5px;
 }
 
 .filter {
-   display: flex;
-   margin-right: 15px;
-   margin-left: 10px;
+    margin-right: 15px;
 }
 
 /* information */
@@ -326,11 +328,6 @@ body {
 @media screen and (max-width: 1280px) {
    
     /* nav */
-    .left img {
-         width: auto;
-         height: 50%;
-    }
-
     /* filter */
     .filter {
          display: flex;
@@ -345,14 +342,13 @@ body {
      }
 
      .icones {
-         width: 100%;
-         height: auto;
-         flex-direction: row;
+        height: 91px;
+        width: 668px;
      }
 
      .icones ul {
          width: 100%;
-         margin-top: 25px;
+         height: auto;
      }
      
      .icones ul :hover {
@@ -363,18 +359,20 @@ body {
       
      li i {
          display: flex;
-         font-size: 18px;
          justify-content: center;
          align-items: center;
+         width: 22px;
+         height: 22px;
      }
      
      .icones li {
-        display: flex;
+        width: auto;
+        height: 42px;
          border: var(--grey-tint-2, #D9D9D9) 2px solid ;
          border-radius: 50px;
          align-items: center;
-         padding: 15px 0px 15px 15px;
-         margin-top: 15px;
+         padding: 4px 15px;
+         margin-top: 20px;
      }
      
      .icones h3 {
@@ -424,28 +422,40 @@ body {
       }
 
       header {
-         margin: 0 35px 0 35px;
+         margin: 0 20px 0 20px;
       } 
 
       nav {
          display: flex;
          flex-direction: column;
          height: auto;
-         margin: auto;
       }
     
       .left {
          width: 100%;
+         height: 79px;
          justify-content: center;
-         margin: 15px;
+      }
+
+      .left img {
+         padding: 30px; 
+         flex-direction: column; 
+         justify-content: center; 
+         align-items: center;  
+         width: 61px;
+         height: 19px;
+         margin: 0;  
       }
 
       .right {
          display: flex;
          width: 100%;
+         height: 36px;
+         margin: 0;
          flex-direction: row;
          align-items: center;
-         margin: 10px 35px 30px 35px; 
+         padding-bottom: 8px;
+         border-bottom: #F2F2F2 2.7px solid; 
       }
     
       .right a {
@@ -453,9 +463,9 @@ body {
          width: 100%;
          justify-content: center;
          align-items: center;
-         padding: 10px 0px 15px 0px;
+         padding-bottom: 16px;
          margin: 0;
-         border-bottom: #F2F2F2 2.7px solid; 
+         
       }
 
       /* right hover */
@@ -469,7 +479,7 @@ body {
       /* title */
       .title h1 {
          width: 90%;
-         font-size: 25px;
+         font-size: 22px;
          font-weight: bolder; 
       }
 
@@ -485,9 +495,9 @@ body {
          flex-direction: row;
          justify-content: center;
          align-items: center;
-         width: 100%;
+         width: 96%;
          height: auto;
-         margin: 0;
+         margin-top: 30px;
          border: #F2F2F2 2px solid;
          border: none;
          padding: 0;
@@ -510,23 +520,29 @@ body {
       .fa-magnifying-glass {
          display: block;
          margin-left: -10px;
-         padding: 18px;
+         padding: 16px;
          background-color: #0065FC;
          color: #F2F2F2;
          border-radius: 15px 15px 15px 15px;
       }
        
       /* filter */
-       .icones ul {
+      .icones {
+         display: flex;
+         width: 335px;
+         height: auto;
+      }
+
+      .icones ul {
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
          width: 100%;
          height: auto;
-         gap: 10px;
          padding: auto;
-         justify-content: center;
+         justify-content: space-around;
          align-items: center;
+         margin-top: 20px;
       }
 
       .icones {
@@ -542,36 +558,44 @@ body {
          display: flex;
          justify-content: center;
          align-items: center;
-         width: 40%;
-         height: auto;
-         padding: 15px 11px 15px 11px; 
-         font-size: 10px; 
+         width: 120px;
+         height: 39px;
+         padding: 4px 19px 4px 19px; 
+         font-size: 14px; 
          border-radius: 35px;
          border: 2px solid var(--grey-tint-2, #D9D9D9);
       }
 
+      .icones h3 {
+         width: 100%;
+         font-size: 14px;
+      }
+
       .filter {
          display: flex;
-         justify-content: center;
-         margin-bottom: 170px;
+         margin-bottom: 120px;
+         margin-top: 0;
       }
 
       .filter h3 {
          width: 100%;
-         margin-top: 10px;
          font-size: 18px;
+         margin-bottom: 20px;
       }
 
       li i {
+         width: 22px;
+         height: 22px;
          justify-content: center;
-         padding-left: 8px;
       }
         
       /*info */
       .info {
-         width: 100%;
+         width: 96%;
+         height: 38px;
          padding: 0;
-         margin: 0;
+         margin-bottom: 35px;
+         justify-content: center;
       }
 
       .info .fa-info {
@@ -583,13 +607,13 @@ body {
          font-size: 12px;
          border: #F2F2F2 2px solid;
          padding: 1px;
-         margin-top: 16px;
+         margin-top: 6px;
       }
       
       .info p {
          width: 100%;
-         padding-bottom: 6px;
-         font-size: 18px;
+         padding-bottom: 1px;
+         font-size: 16px;
       }
     /* ... */
 }
