--- a/css/style.css
+++ b/css/style.css
@@ -71,11 +71,11 @@ nav {
 .right :hover {
     border-top: solid 3px #0065FC;
     cursor: pointer;
-    text-decoration: none;
+   
     color: #0065FC;
 }
 
-.right a:focus {
+.right a:active {
     color: #0065FC;
 }
 
@@ -319,301 +319,4 @@ body {
 
 .populaires-cards .card-rating {
     margin-bottom: 5px;
-}
-
-/* Le code ci-dessous correspond à la version responsive uniquement */
-
-/****** Media queries ***********/
-/* Medium devices (tablets, less/equal than 1024px) */
-@media screen and (max-width: 1280px) {
-   
-    /* nav */
-    /* filter */
-    .filter {
-         display: flex;
-         flex-direction: row;
-         justify-content: center;
-         position: absolute;
-         margin-bottom: 70px;
-     }
-
-     .filter h3 {
-         font-size: 20px;
-     }
-
-     .icones {
-        height: 91px;
-        width: 668px;
-     }
-
-     .icones ul {
-         width: 100%;
-         height: auto;
-     }
-     
-     .icones ul :hover {
-         cursor: pointer;
-         text-decoration: none;
-         background: var(--blue-light, #DEEBFF);
-     }
-      
-     li i {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         width: 22px;
-         height: 22px;
-     }
-     
-     .icones li {
-        width: auto;
-        height: 42px;
-         border: var(--grey-tint-2, #D9D9D9) 2px solid ;
-         border-radius: 50px;
-         align-items: center;
-         padding: 4px 15px;
-         margin-top: 20px;
-     }
-     
-     .icones h3 {
-         width: 90%;
-         font-size: 16px;
-     }
-    
-     /* main */
-    .hebergements-and-populaires {
-         flex-direction: column;  
-    }
-
-    .hebergements {
-         width: 100%;
-    }
-
-    .populaires {
-         width: 100%;
-         margin-top: 50px;
-    }
-
-    .populaires-cards {
-         display: flex;
-         flex-direction: row;
-         justify-content: space-between;
-    }
-
-    .populaires-cards .card {
-         width: 30%;
-    }
-
-    .populaires-cards .card-title {
-         font-size: 14px;
-    }
-
-    .populaires-cards .card-subtitle {
-         font-size: 13px;
-    }
-}
-
-/* Small devices (phones, less than 768px) */
-@media screen and (max-width: 768px)  {
-    
-      .main-container {
-         margin: 0;
-         padding: 0;
-      }
-
-      header {
-         margin: 0 20px 0 20px;
-      } 
-
-      nav {
-         display: flex;
-         flex-direction: column;
-         height: auto;
-      }
-    
-      .left {
-         width: 100%;
-         height: 79px;
-         justify-content: center;
-      }
-
-      .left img {
-         padding: 30px; 
-         flex-direction: column; 
-         justify-content: center; 
-         align-items: center;  
-         width: 61px;
-         height: 19px;
-         margin: 0;  
-      }
-
-      .right {
-         display: flex;
-         width: 100%;
-         height: 36px;
-         margin: 0;
-         flex-direction: row;
-         align-items: center;
-         padding-bottom: 8px;
-         border-bottom: #F2F2F2 2.7px solid; 
-      }
-    
-      .right a {
-         display: flex;
-         width: 100%;
-         justify-content: center;
-         align-items: center;
-         padding-bottom: 16px;
-         margin: 0;
-         
-      }
-
-      /* right hover */
-      .right :hover {
-         width: 100%;
-         border: none;
-         border-bottom: #0065FC 2px solid;
-         padding-bottom: 15px;
-      }
-
-      /* title */
-      .title h1 {
-         width: 90%;
-         font-size: 22px;
-         font-weight: bolder; 
-      }
-
-      .title p {
-         width: 100%;
-         margin-top: 3px;
-         font-size: 16px;
-      }
-
-      /*search bar*/
-      .container {
-         display: flex;
-         flex-direction: row;
-         justify-content: center;
-         align-items: center;
-         width: 96%;
-         height: auto;
-         margin-top: 30px;
-         border: #F2F2F2 2px solid;
-         border: none;
-         padding: 0;
-      }
-
-      .container i {
-         width: auto;
-      }
-
-      .container input {
-         width: 70%;
-         border: #F2F2F2 2px solid;
-      }
-    
-      .container button {
-         display: none;
-         padding: 0;
-      }
-
-      .fa-magnifying-glass {
-         display: block;
-         margin-left: -10px;
-         padding: 16px;
-         background-color: #0065FC;
-         color: #F2F2F2;
-         border-radius: 15px 15px 15px 15px;
-      }
-       
-      /* filter */
-      .icones {
-         display: flex;
-         width: 335px;
-         height: auto;
-      }
-
-      .icones ul {
-         display: flex;
-         flex-direction: row;
-         flex-wrap: wrap;
-         width: 100%;
-         height: auto;
-         padding: auto;
-         justify-content: space-around;
-         align-items: center;
-         margin-top: 20px;
-      }
-
-      .icones {
-         display: flex;
-         flex-direction: row;
-         flex-wrap: wrap;
-         width: 100%;
-         height: auto;
-         align-items: center;
-      }
-
-      .icones li {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         width: 120px;
-         height: 39px;
-         padding: 4px 19px 4px 19px; 
-         font-size: 14px; 
-         border-radius: 35px;
-         border: 2px solid var(--grey-tint-2, #D9D9D9);
-      }
-
-      .icones h3 {
-         width: 100%;
-         font-size: 14px;
-      }
-
-      .filter {
-         display: flex;
-         margin-bottom: 120px;
-         margin-top: 0;
-      }
-
-      .filter h3 {
-         width: 100%;
-         font-size: 18px;
-         margin-bottom: 20px;
-      }
-
-      li i {
-         width: 22px;
-         height: 22px;
-         justify-content: center;
-      }
-        
-      /*info */
-      .info {
-         width: 96%;
-         height: 38px;
-         padding: 0;
-         margin-bottom: 35px;
-         justify-content: center;
-      }
-
-      .info .fa-info {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         width: 25px;
-         height: 25px;
-         font-size: 12px;
-         border: #F2F2F2 2px solid;
-         padding: 1px;
-         margin-top: 6px;
-      }
-      
-      .info p {
-         width: 100%;
-         padding-bottom: 1px;
-         font-size: 16px;
-      }
-    /* ... */
 }
