--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ html {
 /* nav bar */
 .main-container-nav {
     width: 100%;
-    max-width: 1440px;
     box-sizing: border-box;
 }
 
@@ -58,7 +57,7 @@ nav {
     padding-left: 25px; 
     padding-right: 25px; 
     flex-direction: row; 
-    justify-content: space-around; 
+    justify-content: space-evenly; 
     margin-bottom: 40px;
 }
 
@@ -70,26 +69,12 @@ nav {
     padding-top: 19px;
 }
 
-nav a {
-    color: blue;
+.right :hover {
+    border-top: solid 3px #0065FC;
+    cursor: pointer;
     text-decoration: none;
-    transition: color 0.3s ease-in-out;
-  }
-  
-  nav a:hover {
     color: #0065FC;
-    border-top: solid 3px #0065FC;
-  }
-  
-  nav a:active {
-    color: #0065FC;
-    border-top: solid 3px #0065FC;
-  }
-  
-  nav a:active:not(:hover) {
-    color: #0065FC;
-    border-top: solid 3px #0065FC;
-  }
+}
   
 /* title */
 .title p {
