--- a/css/style-small.css
+++ b/css/style-small.css
@@ -40,7 +40,8 @@
        flex-direction: row;
        align-items: center;
        padding-bottom: 8px;
-       border-bottom: #F2F2F2 2.7px solid; 
+       border-bottom: #F2F2F2 2.7px solid;
+       gap: 0;
     }
   
     .right a {
@@ -48,7 +49,7 @@
        width: 100%;
        justify-content: center;
        align-items: center;
-       padding-bottom: 16px;
+       padding-bottom: 17px;
        margin: 0;  
     }
 
@@ -57,7 +58,7 @@
        width: 100%;
        border: none;
        border-bottom: #0065FC 2px solid;
-       padding-bottom: 15px;
+       padding-bottom: 20px;
     }
 
     /* title */
@@ -79,7 +80,7 @@
        flex-direction: row;
        justify-content: center;
        align-items: center;
-       width: 96%;
+       width: 100%;
        height: auto;
        margin-top: 30px;
        border: #F2F2F2 2px solid;
@@ -111,6 +112,18 @@
     }
      
     /* filter */
+
+    .filter {
+        display: flex;
+        margin-bottom: 120px;
+        margin-top: 0;
+     }
+ 
+     .filter h3 {
+        width: 100%;
+        font-size: 18px;
+        margin-bottom: 20px;
+     }
     .icones {
        display: flex;
        flex-direction: column;
@@ -125,7 +138,7 @@
        width: 100%;
        height: auto;
        padding: auto;
-       justify-content: space-around;
+       justify-content: space-evenly;
        align-items: center;
        margin-top: 20px;
     }
@@ -154,18 +167,6 @@
     .icones h3 {
        width: 100%;
        font-size: 14px;
-    }
-
-    .filter {
-       display: flex;
-       margin-bottom: 120px;
-       margin-top: 0;
-    }
-
-    .filter h3 {
-       width: 100%;
-       font-size: 18px;
-       margin-bottom: 20px;
     }
 
     li i {
@@ -201,4 +202,9 @@
        font-size: 16px;
     }
   /* ... */
-}
+    .hebergements-and-populaires {
+        flex-direction: column;
+        padding: 0;
+    }
+    }
+    
