--- a/css/style.css
+++ b/css/style.css
@@ -38,18 +38,17 @@ nav {
 	top: 0;
     overflow: hidden;
     background-color: white;
-    
 }
 
 .left {
     display: flex;
-    width: 121px;
+    width: 161px;
 }
 
 .left img {
     width: 61px;
     height: 19px;
-    margin: 30px;
+    margin: 0 50px;
 }
 
 .right {
@@ -59,7 +58,7 @@ nav {
     padding-left: 25px; 
     padding-right: 25px; 
     flex-direction: row; 
-    justify-content: center;
+    justify-content: space-around;
     margin-bottom: 45px;
     margin-right: 0.31px;
     gap: 68px;
@@ -91,7 +90,7 @@ nav {
 .container {
     display: flex;
     flex-direction: row;
-    height: 49px;
+    height: auto;
     width: 377px;
     border-radius: 15px; 
     border: 1px solid #F2F2F2;
@@ -99,7 +98,7 @@ nav {
 }
 
 .fa-sharp {
-    width: 50px;
+    width: auto;
     height: 49px;
     background-color: #F2F2F2;
     border-radius: 15px 0px 0px 15px;
@@ -116,13 +115,14 @@ nav {
 }
 
 .container input {
-    width: 205px;
+    width: 100%;
     height: 49px;
     font-size: 18px;
     line-height: 21px;
     text-align: center;
     color: #000000;
     border: none;
+    padding: 0 24px;
 }
 
 .container button {
@@ -147,6 +147,7 @@ nav {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
+/* filter */
 .icones {
     display: flex;
     align-items: center;
@@ -322,3 +323,4 @@ body {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
+
