--- a/css/style-small.css
+++ b/css/style-small.css
@@ -10,22 +10,19 @@
        margin: 0 20px 0 20px;
     } 
 
+    /* nav */
     nav {
        display: flex;
        flex-direction: column;
        height: auto;
     }
   
-    .left {
+    .left img {
        width: 100%;
        height: 79px;
        justify-content: center;
-    }
-
-    .left img {
        padding: 30px; 
-       flex-direction: column; 
-       justify-content: center; 
+       flex-direction: column;
        align-items: center;  
        width: 61px;
        height: 19px;
@@ -39,7 +36,7 @@
        margin: 0;
        flex-direction: row;
        align-items: center;
-       padding-bottom: 8px;
+       padding-bottom: 5px;
        border-bottom: #F2F2F2 2.7px solid;
        gap: 0;
     }
@@ -49,7 +46,7 @@
        width: 100%;
        justify-content: center;
        align-items: center;
-       padding-bottom: 17px;
+       padding-bottom: 15px;
        margin: 0;  
     }
 
@@ -58,8 +55,16 @@
        width: 100%;
        border: none;
        border-bottom: #0065FC 2px solid;
-       padding-bottom: 20px;
+       padding-bottom: 15px;
     }
+
+    .right .current {
+      cursor: pointer;
+      border: none;
+      border-bottom: solid 2px #0065FC;
+      text-decoration: none;
+      color: #0065FC;
+  }
 
     /* title */
     .title h1 {
@@ -137,7 +142,7 @@
        width: 100%;
        height: auto;
        padding: auto;
-       justify-content: space-evenly;
+       justify-content: space-around;
        align-items: center;
        margin-top: 20px;
     }
@@ -205,6 +210,6 @@
         flex-direction: column;
         padding: 0;
     }
-    }
-    
+}
+
     
