--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ html {
 /* nav bar */
 .main-container-nav {
     width: 100%;
-    box-sizing: border-box;
 }
 
 nav {
@@ -40,9 +39,12 @@ nav {
     background-color: white;
 }
 
+.left {
+    width: 161px;
+}
+
 .left img {
     display: flex;
-    width: 161px;
     width: 61px;
     height: 19px;
     margin: 0 50px;
@@ -52,8 +54,7 @@ nav {
     display: flex;
     width: 279px ;
     height: 35px;
-    padding-left: 25px; 
-    padding-right: 25px; 
+    padding: 0 25px;
     flex-direction: row; 
     justify-content: space-around;
     margin-bottom: 45px;
@@ -105,11 +106,10 @@ nav {
     width: auto;
     height: 49px;
     background-color: #F2F2F2;
-    border-radius: 15px 0px 0px 15px;
+    border-radius: 15px 0 0 15px;
     color: #000000;
     display: flex;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
     align-items: center;
     font-size: 18px;
 }
@@ -140,7 +140,7 @@ nav {
     background: #0065FC;
     color: #DEEBFF;
     border: 1px solid #0065FC;
-    border-radius: 0px 15px 15px 0px;
+    border-radius: 0 15px 15px 0;
 }
 
 .container :hover {
@@ -173,7 +173,7 @@ nav {
     border: #F2F2F2 2px solid ;
     border-radius: 50px;
     align-items: center;
-    padding: 0 19px 0 19px;
+    padding: 0 19px;
 }
 
 .icones ul :hover {
@@ -266,7 +266,7 @@ body {
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
-    padding: 0px 50px; 
+    padding: 0 50px; 
 }
 
 .hebergements-and-populaires section {
