--- a/css/style-small.css
+++ b/css/style-small.css
@@ -3,6 +3,7 @@
     .main-container {
        margin: 0;
        padding: 0;
+
     }
 
     header {
@@ -10,6 +11,11 @@
     } 
 
     /* nav */
+    .main-container-nav {
+       width: 768;
+       max-width: 100%;
+    }
+
     nav {
        display: flex;
        flex-direction: column;
@@ -222,7 +228,6 @@
          height: auto;
          margin: 0;
          padding: 0;
-         border-radius: 0;
       }
 
       .hebergements-and-populaires .hebergements {
@@ -232,29 +237,19 @@
          height: 1435px;
          margin: 0;
          padding: 20px;
-         border-radius: 0;
          background-color: initial;
          box-shadow: 0 3px 15px rgba(0, 0, 0, 0.10); 
       }
 
-      .form-1 .hebergements-cards {
-         display: flex;
-         flex-direction: column;
-         max-width: 100%;
-         width: 97%;
-         height: auto;
-         gap: 15px;
-         margin-top: 15px;
-      }
-
+      .form-1 .hebergements-cards,
       .form-2 .hebergements-cards {
          display: flex;
          flex-direction: column;
          max-width: 100%;
-         width: 97%;
-         height: auto;  
+         width: 100%;
+         height: auto;
          gap: 15px;
-         margin-top: 15px; 
+         margin-top: 15px;
       }
 
       .hebergements-cards .card {
@@ -272,7 +267,17 @@
          height: 21px;
          font-size: 18px;
       }
-
+       
+      .hebergements-cards .card:nth-child(5) {
+         order: 2;
+       }
+       .hebergements-cards .card:nth-child(6) {
+         order: 5;
+       }
+       .hebergements-cards .card:nth-child(2) {
+         order: 6;
+       }       
+       
    /* populaires section */
       .populaires-cards {
          display: flex;
@@ -296,5 +301,60 @@
       .populaires-cards .card {
          display: flex;
          margin-top: 0px;
+      }
+
+      /* section activites */
+   .activites  {
+         padding: 30px;
+         margin: 35px 0;
+         max-width: 100%;
+      }
+
+   .activites .title {
+         font-size: 16px;
+         font-family: Raleway;
+         padding: 0 0 30px 0;
+      }
+
+   .card-activites {
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: space-between;
+         width: 100%;
+         max-width: 100%;
+         height: 845px;
+         gap: 15px;
+      }
+
+   .card-body {
+         width: 100%; 
+         max-width: 768px;
+         height: 200px; 
+         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.10); 
+         border-radius: 20px;  
+         justify-content: space-between;
+      }
+   
+   .card-body img{
+         width: 100%;
+         max-width: 768px;
+         height: 71%;
+         border-top-left-radius: 20px; 
+         border-top-right-radius: 20px;
+         box-sizing: border-box;
+         margin-bottom: -5px;
+         background-position: center;
+         box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+         object-fit: cover;
+      }
+   
+   .card-body h3 {
+         height: 19px;
+         padding: 20px 19px;
+         box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+         border-bottom-left-radius: 20px;
+         border-bottom-right-radius: 20px;
+         margin-top: -2px;
       }
 }
