--- a/css/style-medium.css
+++ b/css/style-medium.css
@@ -4,7 +4,8 @@
 
      /* nav */
      .main-container-nav {
-          width: 100%;
+          width: 1024px;
+          max-width: 100%;
           height: auto;
      }
 
@@ -40,11 +41,13 @@
          justify-content: center;
          position: absolute;
          margin-bottom: 60px;
+         width: auto;
      }
 
      .icones .filter h3 {
         font-size: 18px;
         margin-bottom: 5px;
+        width: 100%;
      }
 
      .icones {
@@ -108,17 +111,13 @@
      
      .hebergements-cards .card {
           width: 100%;
-          max-width: 350px;
-     }
- 
-    .hebergements-cards .form-1 {
-          width: 100%;
+          max-width: 100%;
           max-height: 192px;
           display: flex;
           flex-grow: 1;
           flex-direction: row;
      }
-
+ 
     .form-container {
          flex-grow: 1;
          width: 100%;
@@ -151,4 +150,66 @@
     .populaires-cards .card-subtitle {
          font-size: 13px;
      }
+
+    /* section activites */
+    .activites  {
+        justify-content: center;
+        align-items: center;
+        margin: 35px 50px;
+        padding: 30px;
+        max-width: 100%;
+    }
+
+    .activites .title {
+        display: flex;
+        font-size: 16px;
+        font-family: Raleway;
+        padding: 0 0 30px 0;
+    }
+
+    .card-activites {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+
+    .card-body {
+        width: 30%; 
+        max-width: 193px;
+        height: 270px; 
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.10); 
+        border-radius: 20px;  
+        justify-content: space-between;
+    }
+    
+    .card-body img{
+        width: 193px;
+        max-width: 100%;
+        height: 200px;
+        margin-bottom: -5px;
+        border-top-left-radius: 20px; 
+        border-top-right-radius: 20px;
+        box-sizing: border-box;
+        background-position: center;
+        box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+        object-fit: cover;
+    }
+    
+    .card-body h3 {
+        display: flex;
+        height: 30px;
+        max-width: 100%;
+        padding: 20px 19px;
+        margin-top: -2px;
+        box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.10);
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        justify-content: flex-start;
+        align-items: center;
+        font-size: 16px;
+    }
+
 }
